--- a/_config.yml
+++ b/_config.yml
@@ -1,25 +1,10 @@
-# Welcome to Jekyll!
-#
-# This config file is meant for settings that affect your whole blog, values
-# which you are expected to set up once and rarely edit after that. If you find
-# yourself editing this file very often, consider using Jekyll's data files
-# feature for the data you need to update frequently.
-#
-# For technical reasons, this file is *NOT* reloaded automatically when you use
-# 'bundle exec jekyll serve'. If you change this file, please restart the server process.
-
 # Site settings
-# These are used to personalize your new site. If you look in the HTML files,
-# you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
-# You can create any custom variable you would like, and they will be accessible
-# in the templates via {{ site.myvariable }}.
-title: Gab's Personal Site
+title: Wilfred Gabriel GAPAS (gab)
 email: wgabrielgapas@gmail.com
-description: >- # this means to ignore newlines until "baseurl:"
-  This is Gab's personal website, where you would most likely find updated information about my research, teaching, non-academic work, and blog. Feel free to contact me through email or Twitter for questions, consultations, or invitations.
+description: A personal website, where you can find updated info about my research, teaching, and other stuff. For further information, please use the navigation tools above. 
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: teachagab
+twitter_username: senseigab
 github_username:  senseigab
 
 # Build settings
@@ -27,15 +12,3 @@ markdown: kramdown
 theme: minima
 plugins:
   - jekyll-feed
-
-# Exclude from processing.
-# The following items will not be processed, by default. Create a custom list
-# to override the default setting.
-# exclude:
-#   - Gemfile
-#   - Gemfile.lock
-#   - node_modules
-#   - vendor/bundle/
-#   - vendor/cache/
-#   - vendor/gems/
-#   - vendor/ruby/
