--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: Wilfred Gabriel A. Gapas - teacher, writer, researcher, cat lover
+title: Wilfred Gabriel A. Gapas
 email: wgabrielgapas@gmail.com
 description: The personal academic homepage of Wilfred Gabriel A. Gapas, an MA candidate in English Language Studies at the University of Santo Tomas, Manila. 
 baseurl: "" # the subpath of your site, e.g. /blog
