--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,57 @@
-# Site settings
-title: Wilfred Gabriel A. Gapas
-email: wgabrielgapas@gmail.com
-description: The personal academic homepage of Wilfred Gabriel A. Gapas, an MA candidate in English Language Studies at the University of Santo Tomas, Manila. 
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: senseigab
-github_username:  senseigab
+site: Wilfred Gabriel A. Gapas (Gab)
 
-# Build settings
+url: 
+baseurl: 
+
+collections:
+  pages:
+    output: true
+    permalink: /:name
+  posts:
+    output: true
+    permalink: /blog/:slug
+  projects:
+    output: true
+    permalink: /project/:slug
+
+defaults:
+  -
+    scope:
+      path: ""
+    values:
+      layout: "default"
+  -
+    scope:
+      path: ""
+      type: "pages"
+    values:
+      layout: "page"
+  -
+    scope:
+      path: ""
+      type: "posts"
+    values:
+      layout: "post"
+  -
+    scope:
+      path: ""
+      type: "projects"
+    values:
+      layout: "project"
+
 markdown: kramdown
-theme: minima
+
+kramdown:
+  input: GFM
+  syntax_highlighter: rouge
+  
+sass:
+  style: compressed
+
 plugins:
-  - jekyll-feed
+  - jekyll-paginate
+  - jekyll-sitemap
+
+paginate: 6
+paginate_path: "/blog/page:num/"
+  
