--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,6 +1,6 @@
 basic_settings:
-  site_title: Wilfred Gabriel Gapas
-  site_tagline: Language Teacher and Applied Linguist
+  site_title: Journal
+  site_tagline: A stunning personal blog Jekyll theme with an image-focused design.
   favicon_image: /images/favicon.png
 
 header_settings:
@@ -12,20 +12,10 @@ menu_settings:
   menu_items:
     - title: 'Latest'
       url: '/'
-    - title: 'About Gab'
-      url: '/about'
-    - title: 'Teaching'
-      url: '/teaching' 
-    - title: 'Services'
-      url: '/services'
     - title: 'Projects'
       url: '/projects/'
-    - title: 'Presentations'
-      url: '/presentations'
-    - title: 'Publications'
-      url: '/publications'
-    - title: 'Resources'
-      url: '/resources'
+    - title: 'About'
+      url: '/about'
     - title: 'Contact'
       url: '/contact'
 
@@ -40,8 +30,8 @@ contact_settings:
 
 social_settings:
   facebook_url: ''
-  twitter_url: 'https://www.twitter.com/senseigab'
-  instagram_url: 'https://www.twitter.com/senseigab'
+  twitter_url: ''
+  instagram_url: ''
   snapchat_url: ''
   youtube_url: ''
   google-plus_url: ''
@@ -56,7 +46,7 @@ social_settings:
   dribbble_url: ''
   behance_url: ''
   deviantart_url: ''
-  github_url: 'https://github.com/senseigab'
+  github_url: ''
   reddit_url: ''
   flickr_url: ''
   etsy_url: ''
@@ -64,7 +54,7 @@ social_settings:
   soundcloud_url: ''
   spotify_url: ''
   bandcamp_url: ''
-  linkedin_url: 'https://ph.linkedin.com/in/gapaswga'
+  linkedin_url: ''
 
 color_settings:
   background_color: '#ffffff'
