--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,6 +1,6 @@
 basic_settings:
-  site_title: Journal
-  site_tagline: A stunning personal blog Jekyll theme with an image-focused design.
+  site_title: Wilfred Gabriel A. Gapas
+  site_tagline: Language Teacher and Applied Linguist
   favicon_image: /images/favicon.png
 
 header_settings:
@@ -14,8 +14,18 @@ menu_settings:
       url: '/'
     - title: 'Projects'
       url: '/projects/'
-    - title: 'About'
+    - title: 'About Gab'
       url: '/about'
+    - title: 'Teaching'
+      url: '/teaching' 
+    - title: 'Services'
+      url: '/services'
+    - title: 'Presentations'
+      url: '/presentations'
+    - title: 'Publications'
+      url: '/publications'
+    - title: 'Resources'
+      url: '/resources'
     - title: 'Contact'
       url: '/contact'
 
@@ -30,8 +40,8 @@ contact_settings:
 
 social_settings:
   facebook_url: ''
-  twitter_url: ''
-  instagram_url: ''
+  twitter_url: 'https://www.twitter.com/senseigab'
+  instagram_url: 'https://www.twitter.com/senseigab'
   snapchat_url: ''
   youtube_url: ''
   google-plus_url: ''
@@ -46,7 +56,7 @@ social_settings:
   dribbble_url: ''
   behance_url: ''
   deviantart_url: ''
-  github_url: ''
+  github_url: 'https://github.com/senseigab'
   reddit_url: ''
   flickr_url: ''
   etsy_url: ''
@@ -54,7 +64,7 @@ social_settings:
   soundcloud_url: ''
   spotify_url: ''
   bandcamp_url: ''
-  linkedin_url: ''
+  linkedin_url: 'https://ph.linkedin.com/in/gapaswga'
 
 color_settings:
   background_color: '#ffffff'
