--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -12,7 +12,7 @@ menu_settings:
   menu_items:
     - title: 'Home'
       url: '/'
-    - title: 'About Me'
+    - title: 'About'
       url: '/about'
     - title: 'Talks'
       url: '/talks'
@@ -24,6 +24,8 @@ menu_settings:
       url: '/projects/'
     - title: 'Services'
       url: '/services'
+    - title: 'Contact'
+      url: '/contact'
 
 grid_settings:
   grid_spacing: 10
