april 20 major update

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -65,7 +65,7 @@ social_settings:
   linkedin_url: 'https://ph.linkedin.com/in/gapaswga'
 
 color_settings:
-  background_color: '#ffffff'
+  background_color: '#E5F5FF'
   background_alt_color: '#F5F7FA'
   text_dark_color: '#2A2F36'
   text_medium_color: '#6C7A89'
