--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,7 +1,7 @@
 basic_settings:
   site_title: Wilfred Gabriel A. Gapas
   site_tagline: Educator and Applied Linguistics Researcher
-  favicon_image: /images/favicon.png
+  favicon_image: /images/favicon.jpg
 
 header_settings:
   logo_image: 
