April 6 major update

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -19,7 +19,7 @@ menu_settings:
     - title: 'Services'
       url: '/services/' 
     - title: 'Presentations'
-      url: '/talks'
+      url: '/presentations'
     - title: 'Publications'
       url: '/publications'
     - title: 'Contact'
