--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -16,7 +16,7 @@ menu_settings:
       url: '/about'
     - title: 'Teaching'
       url: '/teaching'
-    - title: 'Projects'
+    - title: 'Projects & Services'
       url: '/projects/' 
     - title: 'Presentations'
       url: '/presentations'
