--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,4 +1,4 @@
-basic_settings:s
+basic_settings:
   site_title: Wilfred Gabriel A. Gapas
   site_tagline: Language Educator and Applied Linguistics Researcher
   favicon_image: /images/favicon.jpg
