--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,5 +1,5 @@
 basic_settings:
-  site_title: Duet
+  site_title: Wilfred Gabriel A. Gapas
   favicon_image: /images/favicon.png
 
 header_settings:
@@ -20,7 +20,7 @@ menu_settings:
 footer_settings:
   logo_image: 
   logo_width: 200
-  footer_tagline: A beautiful, minimal two-column portfolio Jekyll theme
+  footer_tagline: Educator and Applied Linguistics Researcher
 
 grid_settings:
   overlay_opacity: 0.8
@@ -28,14 +28,14 @@ grid_settings:
 
 contact_settings:
   form_action: ''
-  confirmation_url: '/thanks'
+  form_action: 'https://formspree.io/mqknarvw'
   email_subject: 'Contact form submission'
   send_button_text: 'Send Message'
 
 social_settings:
   facebook_url: ''
-  twitter_url: ''
-  instagram_url: ''
+  twitter_url: 'https://www.twitter.com/senseigab'
+  instagram_url: 'https://www.twitter.com/senseigab'
   snapchat_url: ''
   youtube_url: ''
   google-plus_url: ''
@@ -50,7 +50,7 @@ social_settings:
   dribbble_url: ''
   behance_url: ''
   deviantart_url: ''
-  github_url: ''
+  github_url: 'https://github.com/senseigab'
   reddit_url: ''
   flickr_url: ''
   etsy_url: ''
@@ -58,7 +58,7 @@ social_settings:
   soundcloud_url: ''
   spotify_url: ''
   bandcamp_url: ''
-  linkedin_url: ''
+  linkedin_url: 'https://ph.linkedin.com/in/gapaswga'
 
 color_settings:
   background_color: '#ffffff'
