--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -61,7 +61,7 @@ social_settings:
   linkedin_url: 'https://ph.linkedin.com/in/gapaswga'
 
 color_settings:
-  background_color: '#ca2c92'
+  background_color: '#f4bbff'
   background_alt_color: '#f4f5f6'
   text_dark_color: '#2A2F36'
   text_medium_color: '#6C7A89'
