--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,5 +1,5 @@
 basic_settings:
-  site_title: Wilfred Gabriel A. Gapas
+  site_title: Gab Gapas
   favicon_image: /images/favicon.png
 
 header_settings:
