--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -14,6 +14,10 @@ menu_settings:
       url: '/about'
     - title: 'Teaching'
       url: '/teaching'
+    - title: 'Services'
+      url: '/services'
+    - title: 'Talks'
+      url: '/talks'
     - title: 'Writing'
       url: '/writing'
     - title: 'Contact'
@@ -84,9 +88,9 @@ font_settings:
   regular_weight: 400
   bold_weight: 600
   site_title:
-    small_size: 25
-    medium_size: 30
-    large_size: 35
+    small_size: 22
+    medium_size: 27
+    large_size: 33
     weight: 700
     letter_spacing: -0.02
   menu:
