--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -40,7 +40,7 @@ contact_settings:
 social_settings:
   facebook_url: ''
   twitter_url: 'https://www.twitter.com/senseigab'
-  instagram_url: 'https://www.twitter.com/senseigab'
+  instagram_url: 'https://www.instagram.com/senseigab'
   snapchat_url: ''
   youtube_url: ''
   google-plus_url: ''
